Bug 701227 - don't assume catch's block object has only one entry (r=waldo)

--HG--
extra : rebase_source : 77673329e0841330a954a7f419d2561701c43f3c